--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,3 @@
-<router-outlet></router-outlet>
-<section class="container mt-3">
-  <button class="btn btn-primary">Volor</button>
-</section>
+<main>
+  <router-outlet></router-outlet>
+</main>
