--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-mode fixed-top shadow-sm py-3">
+<nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top shadow-sm py-3">
   <div class="container-fluid">
     <span (click)="toggleSidebarState()" [ngClass]="{ 'text-muted': !sidebarState }" class="fa-solid fa-bars"></span>
 
