Fix imports scss

--- a/src/app/components/sidebar/sidebar.component.scss
+++ b/src/app/components/sidebar/sidebar.component.scss
@@ -1,5 +1,5 @@
-@import "bootstrap/scss/functions";
-@import "bootstrap/scss/variables";
+@import "functions";
+@import "variables";
 
 #sidebar-wrapper {
   min-height: 100vh;
