--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,8 +1,12 @@
-﻿// Variables.
-@import "variables";
+﻿@import "variables-local";
+@import "variables-bs";
+@import "variables-bs-dark";
 
-// Bootstrap.
+/* Importing Bootstrap SCSS file. */
 @import "bootstrap/scss/bootstrap";
+
+/* Importing Datepicker SCSS file. */
+@import "./node_modules/ngx-bootstrap/datepicker/bs-datepicker";
 
 // Vendor.
 @import "vendor/main";
