--- a/src/app/components/tables/table/table.component.html
+++ b/src/app/components/tables/table/table.component.html
@@ -14,7 +14,7 @@
         <tbody>
           <tr>
             <td colspan="100%" class="text-center">
-              <h6>{{ "common.no_data" | translate }}</h6>
+              <h6>{{ "common.no_data" }}</h6>
             </td>
           </tr>
         </tbody>
