--- a/src/app/views/errors/error404/error404.component.html
+++ b/src/app/views/errors/error404/error404.component.html
@@ -1,12 +1,11 @@
 <aw-view-base [showNavbar]="false" [showSidebar]="false" [showFooter]="false">
   <div class="container-fluid">
     <div class="row align-items-center justify-content-center vh-100">
-      <div class="col-lg-6 m-auto alert alert-warning text-center shadow-sm">
+      <div class="col-lg-6 m-auto text-center shadow-sm">
         <div class="my-5">
-          <img src="assets/images/logo_mini.png" alt="logo" />
+          <img src="assets/images/404.jpg" alt="logo" width="100%" />
         </div>
 
-        <h1 class="text-danger">Error 404</h1>
         <h2>Pagina no encontrada</h2>
 
         <span class="h1 text-info">:(</span>
