--- a/src/app/components/buttons/btn-loading/btn-loading.component.html
+++ b/src/app/components/buttons/btn-loading/btn-loading.component.html
@@ -11,7 +11,6 @@
     [extraCss]="spinnerClass"
     [text]="spinnerLoadingText"
     [color]="spinnerColor"
-    [size]="spinnerSize"
-  >
+    [size]="spinnerSize">
   </aw-spinner>
 </button>
