--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -10,8 +10,7 @@
       (click)="handleLogOut()"
       [routerLink]="[siteUrls.home]"
       routerLinkActive=""
-      class="list-group-item list-group-item-action"
-    >
+      class="list-group-item list-group-item-action">
       Log out
     </a>
     <a [routerLink]="[siteUrls.login]" routerLinkActive="" class="list-group-item list-group-item-action"> Login </a>
