--- a/src/app/components/tables/table-header/table-header.component.html
+++ b/src/app/components/tables/table-header/table-header.component.html
@@ -26,8 +26,7 @@
 
           <span
             [ngClass]="{ 'fa-rotate-180': header.orderType === orderings.ascending }"
-            class="fas fa-angle-down arrow opacity3"
-          >
+            class="fas fa-angle-down arrow opacity3">
           </span>
         </ng-container>
 
