--- a/src/app/components/forms/inputs/form-checkbox/form-checkbox.component.html
+++ b/src/app/components/forms/inputs/form-checkbox/form-checkbox.component.html
@@ -7,15 +7,13 @@
     [ngClass]="{ extraCss: true, 'is-invalid': isInvalid() }"
     (ngModelChange)="onChangeValue($event)"
     class="custom-control-input"
-    type="checkbox"
-  />
+    type="checkbox" />
 
   <ng-container *ngIf="label">
     <label
       [for]="id"
       [ngClass]="{ 'text-danger': isInvalid(), 'text-primary': !isInvalid() }"
-      class="custom-control-label"
-    >
+      class="custom-control-label">
       {{ label }}
     </label>
   </ng-container>
@@ -27,6 +25,5 @@
   [badRequest]="badRequest"
   [submitted]="submitted"
   [fieldText]="label"
-  [fieldName]="fieldName"
->
+  [fieldName]="fieldName">
 </aw-field-error>
