--- a/src/app/components/forms/inputs/form-floating/form-floating.component.html
+++ b/src/app/components/forms/inputs/form-floating/form-floating.component.html
@@ -8,9 +8,7 @@
     [ngClass]="{ extraCss: true, 'is-invalid': isInvalid() }"
     [placeholder]="placeholder"
     (ngModelChange)="onChangeValue($event)"
-    class="form-control"
-  />
-
+    class="form-control" />
   <ng-container *ngIf="label">
     <label [for]="id">
       {{ label }}
@@ -24,7 +22,6 @@
     [badRequest]="badRequest"
     [submitted]="submitted"
     [fieldText]="label"
-    [fieldName]="fieldName"
-  >
+    [fieldName]="fieldName">
   </aw-field-error>
 </ng-container>
