--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -10,8 +10,7 @@
       data-bs-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent"
       aria-expanded="false"
-      aria-label="Toggle navigation"
-    >
+      aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -21,8 +20,7 @@
             class="nav-link cursor-pointer"
             aria-current="page"
             [routerLink]="[siteUrls.home]"
-            routerLinkActive="active"
-          >
+            routerLinkActive="active">
             Inicio
           </a>
         </li>
