--- a/src/app/components/spinner/spinner.component.html
+++ b/src/app/components/spinner/spinner.component.html
@@ -1,11 +1,6 @@
 <ng-container *ngIf="loading">
   <div [ngClass]="justify" class="d-flex">
-    <div
-      [ngClass]="[color, extraCss]"
-      [style]="style"
-      class="spinner-border"
-      role="status"
-    >
+    <div [ngClass]="[color, extraCss]" [style]="style" class="spinner-border" role="status">
       <span class="sr-only">Loading...</span>
     </div>
 
