--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top shadow-sm py-3">
   <div class="container-fluid">
-    <span (click)="toggleSidebarState()" [ngClass]="{ 'text-muted': !sidebarState }" class="fa-solid fa-bars"></span>
+    <span (click)="toggleSidebarState()" [ngClass]="{ 'text-muted': !sidebarState$() }" class="fa-solid fa-bars"></span>
 
     <a class="navbar-brand cursor-pointer" [routerLink]="[siteUrls.home]">{{ siteName }}</a>
     <button
@@ -45,7 +45,7 @@
         </li>
       </ul>
       <div class="d-flex">
-        <ng-container *ngIf="isAuth">{{ userName }}</ng-container>
+        <ng-container *ngIf="authState$()">{{ userName }}</ng-container>
       </div>
     </div>
   </div>
