--- a/src/app/components/views/view-base/view-base.component.html
+++ b/src/app/components/views/view-base/view-base.component.html
@@ -6,20 +6,20 @@
 
 <div class="d-flex">
   <!-- sidebar -->
-  <ng-container *ngIf="showSidebar">
-    <aw-sidebar [ngClass]="{ 'visible-navbar': showNavbar, 'visible-navbar-hide': !showNavbar }"></aw-sidebar>
+  <ng-container *ngIf="showSidebar$()">
+    <aw-sidebar [ngClass]="{ 'visible-navbar': showNavbar$(), 'visible-navbar-hide': !showNavbar$() }"></aw-sidebar>
   </ng-container>
   <!-- end sidebar -->
 
   <div id="page-content-wrapper">
     <!-- navbar -->
-    <ng-container *ngIf="showNavbar">
+    <ng-container *ngIf="showNavbar$()">
       <aw-navbar></aw-navbar>
     </ng-container>
     <!-- end navbar -->
 
     <!-- content page -->
-    <div class="fade-in" [ngClass]="{ 'visible-navbar': showNavbar, 'visible-navbar-hide': !showNavbar }">
+    <div class="fade-in" [ngClass]="{ 'visible-navbar': showNavbar$(), 'visible-navbar-hide': !showNavbar$() }">
       <div [ngClass]="cssContent" class="pt-2">
         <ng-content></ng-content>
       </div>
@@ -29,7 +29,7 @@
 </div>
 
 <!-- footer -->
-<ng-container *ngIf="showFooter">
+<ng-container *ngIf="showFooter$()">
   <aw-footer></aw-footer>
 </ng-container>
 <!-- end footer -->
