--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,9 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top shadow-sm py-3">
   <div class="container-fluid">
-    <span (click)="toggleSidebarState()" [ngClass]="{ 'text-muted': !sidebarState$() }" class="fa-solid fa-bars"></span>
+    <span
+      (click)="toggleSidebarState()"
+      [ngClass]="{ 'text-muted': sidebarStates.closed === sidebarState$() }"
+      class="fa-solid fa-bars"></span>
 
     <a class="navbar-brand cursor-pointer" [routerLink]="[siteUrls.home]">{{ siteName }}</a>
     <button
