Fix jwt token services

--- a/src/app/views/auth/login/login.component.html
+++ b/src/app/views/auth/login/login.component.html
@@ -17,8 +17,7 @@
             label="Nombre de usuario"
             [form]="form"
             [badRequest]="badRequest"
-            [submitted]="submitted"
-            [inputType]="formTypes.text">
+            [submitted]="submitted">
           </aw-form-floating>
         </div>
         <!-- end userName -->
