--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -20,7 +20,7 @@
     </div>
 
     <div class="mt-3">
-      <button (click)="logOut()" class="btn btn-outline-danger">Log out</button>
+      <button (click)="handleLogOut()" class="btn btn-outline-danger">Log out</button>
     </div>
   </ng-container>
 
