Revisado y corregido interface BadRequest

--- a/src/app/views/auth/login/login.component.html
+++ b/src/app/views/auth/login/login.component.html
@@ -9,6 +9,8 @@
           <div class="alert alert-danger" role="alert">Nombre de usuario o contraseña no validos.</div>
         </ng-container>
 
+        <aw-non-field-errors [badRequest]="badRequest"></aw-non-field-errors>
+
         <!-- userName -->
         <div class="mb-2">
           <aw-form-floating
