Creada view tests

--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -4,7 +4,7 @@
     <a [routerLink]="[siteUrls.home]" routerLinkActive="" class="list-group-item list-group-item-action active">
       Dashboard
     </a>
-    <a [routerLink]="[siteUrls.home]" routerLinkActive="" class="list-group-item list-group-item-action">Shortcuts</a>
+    <a [routerLink]="[siteUrls.homeTests]" routerLinkActive="" class="list-group-item list-group-item-action">Tests</a>
     <a [routerLink]="[siteUrls.home]" routerLinkActive="" class="list-group-item list-group-item-action">Overview</a>
     <a
       (click)="handleLogOut()"
