Renombradas funcines debug a log

--- a/src/app/views/tests/home-test/home-test.component.html
+++ b/src/app/views/tests/home-test/home-test.component.html
@@ -1,4 +1,9 @@
 <aw-view-base>
-  <h1>Hello world</h1>
+  <h1>Hello tests</h1>
+  <div>
+    <button (click)="handleAlertsConsole()" class="btn btn-primary">Mostrar alertas en consola</button>
+  </div>
+
+  <hr />
   {{ employees | json }}
 </aw-view-base>
