--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -5,24 +5,24 @@
       [ngClass]="{ 'text-muted': sidebarStates.closed === sidebarState$() }"
       class="fa-solid fa-bars"></span>
 
-    <a class="navbar-brand cursor-pointer" [routerLink]="[siteUrls.home]">{{ siteName }}</a>
+    <a [routerLink]="[siteUrls.home]" class="navbar-brand cursor-pointer">{{ siteName }}</a>
     <button
-      class="navbar-toggler"
-      type="button"
-      data-bs-toggle="collapse"
-      data-bs-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent"
       aria-expanded="false"
-      aria-label="Toggle navigation">
+      aria-label="Toggle navigation"
+      class="navbar-toggler"
+      data-bs-target="#navbarSupportedContent"
+      data-bs-toggle="collapse"
+      type="button">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
           <a
-            class="nav-link cursor-pointer"
-            aria-current="page"
             [routerLink]="[siteUrls.home]"
+            aria-current="page"
+            class="nav-link cursor-pointer"
             routerLinkActive="active">
             Inicio
           </a>
@@ -31,14 +31,14 @@
           <a class="nav-link cursor-pointer">Login</a>
         </li>
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+          <a aria-expanded="false" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button">
             Dropdown
           </a>
           <ul class="dropdown-menu border-0">
             <li><a class="dropdown-item" href="#">Action</a></li>
             <li><a class="dropdown-item" href="#">Another action</a></li>
             <li>
-              <hr class="dropdown-divider" />
+              <hr class="dropdown-divider"/>
             </li>
             <li><a (click)="logOut()" class="dropdown-item cursor-pointer">Log out</a></li>
           </ul>
