Cambiado identifier por email para el form de login

--- a/src/app/views/auth/login/login.component.html
+++ b/src/app/views/auth/login/login.component.html
@@ -17,8 +17,8 @@
             [badRequest]="badRequest"
             [form]="form"
             [submitted]="submitted"
-            fieldName="identifier"
-            formControlName="identifier"
+            fieldName="email"
+            formControlName="email"
             label="Email">
           </aw-form-floating>
         </div>
