Implementado registro de nuevo usuario

--- a/src/app/components/cards/card/card.component.html
+++ b/src/app/components/cards/card/card.component.html
@@ -1,4 +1,4 @@
-<div [ngClass]="extraCss" class="card border-0 shadow-sm">
+<div [ngClass]="extraCss" class="card border-0 shadow-sm bg-body-tertiary">
   <ng-content select="[awCardHeader]"></ng-content>
   <ng-content select="[awCardImage]"></ng-content>
 
