--- a/src/app/views/auth/login/login.component.html
+++ b/src/app/views/auth/login/login.component.html
@@ -11,7 +11,7 @@
 
         <aw-non-field-errors [badRequest]="badRequest"></aw-non-field-errors>
 
-        <!-- userName -->
+        <!-- email -->
         <div class="mb-2">
           <aw-form-floating
             [badRequest]="badRequest"
@@ -22,7 +22,7 @@
             label="Email">
           </aw-form-floating>
         </div>
-        <!-- end userName -->
+        <!-- end email -->
 
         <!-- password -->
         <aw-form-floating
