Modificada vista validacion correos

--- a/src/app/views/identity/register-validate/register-validate.component.html
+++ b/src/app/views/identity/register-validate/register-validate.component.html
@@ -1,11 +1,28 @@
 <aw-view-base [showFooter]="false" [showNavbar]="false" [showSidebar]="false" cssContent="container">
-  <ng-container *ngIf="errorMessages.length === 0">
-    <div class="alert alert-success mt-4">
-      Se ha validado con éxito el email, ahora puede <a [routerLink]="siteUrls.login">identificarse</a> como usuario.
-    </div>
-  </ng-container>
+  <div class="row">
+    <div class="col-lg-6 m-auto">
+      <!-- success-->
+      <ng-container *ngIf="errorMessages.length === 0">
+        <div class="alert alert-success mt-4">
+          Se ha validado con éxito el email, ahora puede identificarse como usuario.
+        </div>
 
-  <ng-container *ngIf="errorMessages.length > 0">
-    <div class="alert alert-danger mt-4">Ha ocurrido un error en la validación del correo.</div>
-  </ng-container>
+        <div class="d-flex">
+          <button [routerLink]="siteUrls.login" class="btn btn-outline-success align-self-center mx-auto">
+            Identificarse
+          </button>
+        </div>
+      </ng-container>
+      <!-- end success-->
+
+      <!-- failure-->
+      <ng-container *ngIf="errorMessages.length > 0">
+        <div class="alert alert-danger mt-4">
+          Ha ocurrido un error en la validación del correo.<br />
+          <strong>Error:</strong> {{ errorMessages[0] }}
+        </div>
+      </ng-container>
+      <!-- end failure-->
+    </div>
+  </div>
 </aw-view-base>
