Rev code recovery password

--- a/src/app/views/auth/login/login.component.html
+++ b/src/app/views/auth/login/login.component.html
@@ -37,7 +37,7 @@
         <!-- end password -->
 
         <a [routerLink]="[siteUrls.register]" class="small">Registro nuevo usuario</a>
-        <a [routerLink]="[siteUrls.rememberPassword]" class="small p-2">¿Olvidaste contraseña?</a>
+        <a [routerLink]="[siteUrls.recoveryPassword]" class="small p-2">¿Olvidaste contraseña?</a>
 
         <aw-btn-loading
           [loading]="loading"
