--- a/src/app/views/identity/recovery-password/recovery-password.component.html
+++ b/src/app/views/identity/recovery-password/recovery-password.component.html
@@ -7,6 +7,12 @@
 
         <aw-non-field-errors [badRequest]="badRequest"></aw-non-field-errors>
 
+        <ng-container *ngIf="hasResponse">
+          <div class="alert alert-success">
+            Se ha enviado un correo para restablecer la contraseña. Siga las indicaciones desde su correo.
+          </div>
+        </ng-container>
+
         <!-- email -->
         <div class="mb-2">
           <aw-form-floating
