--- a/src/app/views/identity/recovery-password/recovery-password.component.html
+++ b/src/app/views/identity/recovery-password/recovery-password.component.html
@@ -1,8 +1,8 @@
 <aw-view-base [showFooter]="false" [showNavbar]="false" [showSidebar]="false">
-  <div class="form-remember-password w-100 m-auto mt-5">
+  <div class="form-recovery-password w-100 m-auto mt-5">
     <aw-card extraCss="p-4">
       <form (ngSubmit)="handleSubmit()" [formGroup]="form">
-        <h1 class="h3 mb-3 fw-normal"><span class="fa-solid fa-user"></span>Recuperar contraseña</h1>
+        <h1 class="h3 mb-3 fw-normal"><span class="fa-solid fa-lock"></span> Recuperar contraseña</h1>
         <hr />
 
         <aw-non-field-errors [badRequest]="badRequest"></aw-non-field-errors>
@@ -19,9 +19,10 @@
             [badRequest]="badRequest"
             [form]="form"
             [submitted]="submitted"
+            [inputType]="formInputTypes.email"
             fieldName="email"
             formControlName="email"
-            label="Email">
+            label="Correo electrónico">
           </aw-form-floating>
         </div>
         <!-- end email -->
