--- a/src/app/views/identity/register/register.component.html
+++ b/src/app/views/identity/register/register.component.html
@@ -2,7 +2,7 @@
   <div class="form-register w-100 m-auto">
     <aw-card extraCss="p-4">
       <form (ngSubmit)="handleSubmit()" [formGroup]="form">
-        <h1 class="h3 mb-3 fw-normal"><span class="fa-solid fa-user"></span>Registro</h1>
+        <h1 class="h3 mb-3 fw-normal"><span class="fa-solid fa-user"></span> Nuevo registro</h1>
         <hr />
 
         <aw-non-field-errors [badRequest]="badRequest"></aw-non-field-errors>
